--- a/ssa/Cargo.toml
+++ b/ssa/Cargo.toml
@@ -9,3 +9,6 @@ petgraph.workspace = true
 slice-dst.workspace = true
 erasable.workspace = true
 ref-cast.workspace = true
+bumpalo.workspace = true
+smallvec.workspace = true
+logos.workspace = true
