add test framework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ ref-cast = "1"
 bumpalo = "3"
 yoke = { version = "0.7", features = ["derive"] }
 stable_deref_trait = { version = "1" }
+linkme = "0.3.25"
+serde = { version = "1", features = ["derive"] }
+serde_gura = "0.1.8"
 
 [workspace.dependencies.smallvec]
 version = "1"
@@ -22,3 +25,8 @@ features = ["union", "const_generics"]
 [workspace.dependencies.logos]
 git = "https://github.com/RustyYato/logos.git"
 branch = "remove-unreachable-error"
+
+[workspace.dependencies.test-harness]
+# git = "https://github.com/RustyYato/test-harness.git"
+# branch = "main"
+path = "../test-harness/test-harness"
