--- a/ssa/Cargo.toml
+++ b/ssa/Cargo.toml
@@ -15,6 +15,7 @@ stable_deref_trait.workspace = true
 smallvec.workspace = true
 logos.workspace = true
 serde.workspace = true
+bstr.workspace = true
 
 [dev-dependencies]
 test-harness.workspace = true
