--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ yoke = { version = "0.7", features = ["derive"] }
 stable_deref_trait = { version = "1" }
 linkme = "0.3.25"
 serde = { version = "1", features = ["derive"] }
-serde_gura = "0.1.8"
 
 [workspace.dependencies.smallvec]
 version = "1"
@@ -28,6 +27,5 @@ git = "https://github.com/RustyYato/logos.git"
 branch = "remove-unreachable-error"
 
 [workspace.dependencies.test-harness]
-# git = "https://github.com/RustyYato/test-harness.git"
-# branch = "main"
-path = "../test-harness/test-harness"
+git = "https://github.com/RustyYato/test-harness.git"
+branch = "main"
